Add linkedin link to hero area as well as rel noopener and target blank

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <p>Focused on the field of frontend web development, I live in JavaScript and open source technologies such as Express, Node.js and Jekyll. My goal is to obtain remote web development opportunities and/or part-time/contract employment.</p>
               <p>For over 2 decades I have worked with a variety of teams to design and build sites that address business and user needs. I manage sites in higher ed and have maintained sites in the nutritional supplement industry as well. I strive to create usable, polished and performant products through passionate and deliberate design.</p>
               <p>I live in Kankakee Illinois. I enjoy music, oil painting, and single malt whiskey.</p>
-                <p>Contact me or reach out via LinkedIn or send an email.</p>
+                <p>Contact me or reach out via <a href="https://www.linkedin.com/in/rogerehmpke" target="_blank" rel="noopener">LinkedIn</a> or send an email.</p>
               </div>
           </div>
           </div>
@@ -197,7 +197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="footer-site-map">
             <div class="row space-top">
               <div class="col-md-12 col-lg-12 col text-center">
-                <p><a title="Twitter" aria-label="Twitter" href="http://twitter.com/rehmpke" class="social-sharing-icon white" style=""><svg version="1.1" id="Twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                <p><a  target="_blank" rel="noopener" title="Twitter" aria-label="Twitter" href="http://twitter.com/rehmpke" class="social-sharing-icon white" style=""><svg version="1.1" id="Twitter" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                   y="0px" viewBox="0 0 40 40" height="30" width="30" style="enable-background:new 0 0 40 40;" xml:space="preserve">
                   <path d="M39.8,7.8c-1.1,1.6-2.5,3-4.1,4.2c0,0.2,0,0.6,0,1.1c0,2.2-0.3,4.3-1,6.5c-0.6,2.2-1.6,4.2-2.9,6.2S29,29.5,27.2,31
                 	c-1.8,1.5-3.9,2.7-6.5,3.7c-2.5,0.9-5.2,1.4-8.1,1.4C8.2,36,4,34.8,0.2,32.4c0.6,0.1,1.2,0.1,2,0.1c3.8,0,7.1-1.2,10.1-3.5
@@ -207,7 +207,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 	c1.8-0.4,3.5-1,5.1-2C38,6.5,36.8,8,35.1,9C36.6,8.9,38.2,8.4,39.8,7.8z" />
                 </svg>
 </a>
-                  <a title="Github" aria-label="Github" href="https://github.com/rehmpke" class="social-sharing-icon white" style=""><svg version="1.1" id="Github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                  <a  target="_blank" rel="noopener" title="Github" aria-label="Github" href="https://github.com/rehmpke" class="social-sharing-icon white" style=""><svg version="1.1" id="Github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                     y="0px" viewBox="0 0 40 40" height="30" width="30" style="enable-background:new 0 0 40 40;" xml:space="preserve">
                     <path d="M20,0.7c3.6,0,6.9,0.9,9.9,2.6s5.4,4.2,7.2,7.2c1.8,3,2.6,6.3,2.6,9.9c0,4.3-1.3,8.2-3.8,11.6c-2.5,3.4-5.8,5.8-9.7,7.1
                   	c-0.5,0.1-0.8,0-1-0.2c-0.2-0.2-0.3-0.5-0.3-0.8c0-0.1,0-0.7,0-2c0-1.3,0-2.4,0-3.5c0-1.7-0.4-2.9-1.3-3.7c1-0.1,1.9-0.3,2.6-0.5
@@ -229,7 +229,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   	c0,0.2,0.2,0.3,0.5,0.2C14.9,33,15,32.9,15,32.7z" />
                   </svg>
 </a>
-                <a title="LinkedIn" aria-label="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="social-sharing-icon white" style=""><svg version="1.1" id="Linked_in" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                <a  target="_blank" rel="noopener" title="LinkedIn" aria-label="LinkedIn" href="https://www.linkedin.com/in/rogerehmpke" class="social-sharing-icon white" style=""><svg version="1.1" id="Linked_in" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                   y="0px" viewBox="0 0 40 40" height="30" width="30" style="enable-background:new 0 0 40 40;" xml:space="preserve">
                   <path d="M9.2,13.4v25.5H0.7V13.4H9.2z M9.8,5.5c0,1.3-0.4,2.3-1.3,3.1S6.4,9.9,5,9.9H4.9c-1.4,0-2.5-0.4-3.4-1.3S0.2,6.8,0.2,5.5
                 	c0-1.3,0.4-2.3,1.3-3.2s2-1.2,3.5-1.2s2.6,0.4,3.4,1.2S9.7,4.3,9.8,5.5z M39.8,24.3v14.6h-8.5V25.2c0-1.8-0.3-3.2-1-4.2
@@ -238,7 +238,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 	c0.9-0.3,1.9-0.4,2.9-0.4c2.9,0,5.3,1,7.1,2.9C38.9,17.7,39.8,20.5,39.8,24.3z" />
                 </svg>
 </a>
-              <a title="Codepen" aria-label="Codepen" href="https://codepen.io/rehmpke/" class="social-sharing-icon white" style="">
+              <a  target="_blank" rel="noopener" title="Codepen" aria-label="Codepen" href="https://codepen.io/rehmpke/" class="social-sharing-icon white" style="">
                 <svg version="1.1" id="Codepen" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="30" width="30" x="0px"
                   y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" xml:space="preserve">
                   <path d="M5,26l13.3,8.9V27L10.9,22L5,26z M3.6,22.8L7.9,20l-4.3-2.8V22.8z M21.7,34.9L35,26l-5.9-4L21.7,27V34.9z M20,24l6-4l-6-4
