Add basic bookmark to contact form from hero

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <p>Focused on the field of frontend web development, I live in JavaScript and open source technologies such as Express, Node.js and Jekyll. My goal is to obtain remote web development opportunities and/or part-time/contract employment.</p>
               <p>For over 2 decades I have worked with a variety of teams to design and build sites that address business and user needs. I manage sites in higher ed and have maintained sites in the nutritional supplement industry as well. I strive to create usable, polished and performant products through passionate and deliberate design.</p>
               <p>I live in Kankakee Illinois. I enjoy music, oil painting, and single malt whiskey.</p>
-                <p>Contact me or reach out via <a href="https://www.linkedin.com/in/rogerehmpke" target="_blank" rel="noopener">LinkedIn</a> or send an email.</p>
+                <p>Contact me or reach out via <a href="https://www.linkedin.com/in/rogerehmpke" target="_blank" rel="noopener">LinkedIn</a> or <a href="#ContactMe">send an email</a>.</p>
               </div>
           </div>
           </div>
@@ -167,7 +167,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
         <!--Mailing list additional information for the page-->
-        <aside class="mailing-list container-fluid">
+        <aside id="ContactMe" class="mailing-list container-fluid">
           <div class="row align-items-center justify-content-center">
               <div class="col-lg-4 col-md-4">
                 <form action="https://formspree.io/roger@rogerehmpke.com" method="POST" style="margin:0 auto;">
