--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <header id="header" class="global-header container">
       <div class="row">
         <div class="col">
-            <h1><a href="https://www.rogerehmpke.com" class="logo--header">Roger Ehmpke</a></h1>
+            <h1><a href="https://www.rogerehmpke.com" class="logo--header">Roger Ehmpke test</a></h1>
         </div>
         </div>
     </header>
